--- a/main/static/css/styles.css
+++ b/main/static/css/styles.css
@@ -816,6 +816,7 @@ h1, h2, h3, h4, h5 {
   height: 75vh;
   padding: 0px;
   margin: 50px;
+  min-width: 400px;
 }
 
 .login-graphic { 
@@ -850,6 +851,7 @@ h1, h2, h3, h4, h5 {
   padding: 30px;
   background-color: #f7f7f7;
   min-width: 350px;
+  max-width: 80%;
 }
 
 .login-logo {
@@ -866,12 +868,95 @@ h1, h2, h3, h4, h5 {
 
 .pass-container .form-control, 
 .user-container .form-control {
-  padding-left: 30px;
+  padding-left: 40px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  border: none;
+  border-bottom: 2px solid #ccc;
+  transition: border-color 0.3s ease;
+  border-radius: 0;
+}
+
+.pass-container .form-control:focus,
+.user-container .form-control:focus {
+  border-bottom: 2px solid #ff9d00;
 }
 
 .pass-container i, .user-container i {
   position: absolute;
-  left: 10px;
+  left: 15px;
   top: 50%;
   transform: translateY(-50%);
+}
+
+.login-button-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.login-form {
+  margin-bottom: 10px;
+}
+
+.login-heading, .login-msg {
+  margin: auto;
+}
+
+.google-login-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.google-btn {
+  background-color: white;
+  padding-left: 30px;
+  padding-right: 30px;
+  border: 2px solid #ccc;
+  text-transform: capitalize;
+}
+
+.google-btn:hover{
+  /*background-color: #ccc;*/
+  border: 2px solid #ff9d00;
+}
+
+.google-icon {
+  width: 24px;
+  height: 24px;
+}
+
+.email-login-break {
+  position: relative;
+}
+
+.email-login-break span {
+  background-color: #f7f7f7;;
+  z-index: 3;
+  position: relative;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.email-login-break::before {
+  content: "";
+  height: 1px;
+  width: 50%;
+  background-color: #000;
+  position: absolute;
+  top: 50%;
+  right: 0;
+  z-index: 1;
+}
+
+.email-login-break::after {
+  content: "";
+  height: 1px;
+  width: 50%;
+  background-color: #000;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  z-index: 2;
 }
