make slight changes on the payment method details

--- a/main/page_addons/templates/faqs.html
+++ b/main/page_addons/templates/faqs.html
@@ -229,7 +229,7 @@
                   <p>We accept the following payment methods:</p>
                   <ul>
                     <li>Credit and debit cards (Visa, MasterCard, American Express)</li>
-                    <li>KlanaPay</li>
+                    <li>Klarna</li>
                     <li>Revolut</li>
                   </ul>
                   <p>All payments are processed securely through our payment providers.</p>
