--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -178,7 +178,7 @@
         <div class="col-md-4 mb-4 mb-md-0">
           <h5 class="text-accent mb-3">Useful Links.</h5>
           <ul class="list-unstyled">
-            <li class="mb-2"><a href="#" class="text-white text-decoration-none"><i class="bi bi-info-circle-fill me-2 text-accent"></i> About Us</a></li>
+            <li class="mb-2"><a href="{{url_for('addons_page.about_us')}}" class="text-white text-decoration-none"><i class="bi bi-info-circle-fill me-2 text-accent"></i> About Us</a></li>
             <li class="mb-2"><a href="#" class="text-white text-decoration-none"><i class="bi bi-file-text-fill me-2 text-accent"></i> Terms & Conditions</a></li>
             <li class="mb-2"><a href="#" class="text-white text-decoration-none"><i class="bi bi-shield-lock-fill me-2 text-accent"></i> Privacy Policy</a></li>
             <li class="mb-2"><a href="{{ url_for('addons_page.faqs') }}" class="text-white text-decoration-none"><i class="bi bi-question-circle-fill me-2 text-accent"></i> FAQ</a></li>
