--- a/main/page_addons/templates/terms.html
+++ b/main/page_addons/templates/terms.html
@@ -25,7 +25,7 @@
           
           <p>By accessing or using our Services, you agree to be bound by these Terms. If you do not agree to these Terms, please do not use our Services.</p>
           
-          <p>Vintage Vault is an online auction platform specialized for antiques and collectibles. We provide a marketplace where sellers can list items for auction and buyers can bid on these items.</p>
+          <p>Vintage Vault is an online auction platform specialised for antiques and collectibles. We provide a marketplace where sellers can list items for auction and buyers can bid on these items.</p>
         </div>
       </div>
 
@@ -160,7 +160,7 @@
           <p>To the maximum extent permitted by law, Vintage Vault shall not be liable for any indirect, incidental, special, consequential, or punitive damages, or any loss of profits or revenues, whether incurred directly or indirectly, or any loss of data, use, goodwill, or other intangible losses resulting from:</p>
           <ol>
             <li>Your use or inability to use our Services</li>
-            <li>Any unauthorized access to or use of our servers and/or any personal information stored therein</li>
+            <li>Any unauthorised access to or use of our servers and/or any personal information stored therein</li>
             <li>Any interruption or cessation of transmission to or from our Services</li>
             <li>Any bugs, viruses, trojan horses, or the like that may be transmitted to or through our Services</li>
           </ol>
