--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -239,7 +239,7 @@
     <div class="cookie-content">
       <div class="cookie-text">
         <h6>Cookie Consent</h6>
-        <p>We use cookies to enhance your browsing experience, serve personalized ads or content, and analyze our traffic. By clicking "Accept All", you consent to our use of cookies.</p>
+        <p>We use cookies to enhance your browsing experience and analyse our traffic. By clicking "Accept All", you consent to our use of cookies.</p>
       </div>
       <div class="cookie-buttons">
         <button id="reject-cookies" class="btn btn-outline-light btn-sm">Reject</button>
