feat: saves dashboard auction tab in session storage

--- a/main/page_dashboard/templates/dashboard.html
+++ b/main/page_dashboard/templates/dashboard.html
@@ -466,7 +466,7 @@
           </table>
         </div>
         {% else %}
-        <div class="alert alert-info">You haven't won any auctions yet.</div>
+        <div class="alert alert-info">You haven't won any auctions.</div>
         {% endif %}
       </div>
 
@@ -604,4 +604,5 @@
 <script src="{{ url_for('static', filename='js/changeExpertise.js') }}"></script>
 <script src="{{ url_for('static', filename='js/dashboard.js') }}"></script>
 <script src="{{ url_for('static', filename='js/payment.js') }}"></script>
+<script src="{{ url_for('static', filename='js/dashboardTab.js') }}"></script>
 {% endblock %}
