--- a/main/page_item/templates/item.html
+++ b/main/page_item/templates/item.html
@@ -262,7 +262,7 @@
               <button id="unwatch-btn" class="btn btn-success btn-lg" data-item-url="{{ item.url }}">
                 <i class="fas fa-check"></i> Watched
               </button>
-            {% elif current_user.is_authenticated %}
+            {% elif current_user.is_authenticated and current_user.role == 1 %}
               <button id="watch-btn" class="btn btn-outline-dark btn-lg" data-item-url="{{ item.url }}">
                 <i class="fas fa-eye"></i> Add to Watchlist
               </button>
