style: improved expert dashboard styling

--- a/main/page_dashboard/templates/dashboard_user.html
+++ b/main/page_dashboard/templates/dashboard_user.html
@@ -289,5 +289,5 @@
 
 <script src="{{ url_for('static', filename='js/dashboard.js') }}"></script>
 <script src="{{ url_for('static', filename='js/payment.js') }}"></script>
-<script src="{{ url_for('static', filename='js/dashboardTab.js') }}"></script>
+<script src="{{ url_for('static', filename='js/dashboardTabs.js') }}"></script>
 {% endblock %}
