--- a/main/static/css/styles.css
+++ b/main/static/css/styles.css
@@ -303,7 +303,7 @@ h1, h2, h3, h4, h5 {
 /* Badges */
 .badges {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   gap: 0.5rem;
   margin-bottom: 0.5rem;
 }
@@ -313,6 +313,7 @@ h1, h2, h3, h4, h5 {
   font-weight: 500;
   letter-spacing: 0.5px;
   padding: 0.5em 0.7em;
+  width: fit-content;
 }
 
 /* Animations & Effects */
