--- a/main/page_dashboard/templates/dashboard_expert.html
+++ b/main/page_dashboard/templates/dashboard_expert.html
@@ -8,7 +8,7 @@
 <!-- Dashboard Header -->
 <div class="dashboard-header">
   <div class="container">
-    <h1 class="dashboard-title mb-0">EXPERT DASHBOARD</h1>
+    <h1 class="dashboard-title mb-0">Expert Dashboard</h1>
   </div>
 </div>
 
