--- a/main/page_dashboard/templates/dashboard_user.html
+++ b/main/page_dashboard/templates/dashboard_user.html
@@ -8,7 +8,7 @@
 <!-- Dashboard Header -->
 <div class="dashboard-header">
   <div class="container">
-    <h1 class="dashboard-title mb-0">DASHBOARD</h1>
+    <h1 class="dashboard-title mb-0">Dashboard</h1>
   </div>
 </div>
 
