--- a/main/static/css/dashboard-styles.css
+++ b/main/static/css/dashboard-styles.css
@@ -8,9 +8,18 @@
   border-bottom: 3px solid var(--accent-color);
 }
 
+/* Allow truncation of long text on small screens */
+.text-long {
+  display: inline;
+}
+
+.text-short {
+  display: none;
+}
+
 .expertise-card,
 .auth-card {
-  border: 2px solid var(--primary-color);
+  border: 1.5px solid var(--primary-color);
   border-radius: 0;
   margin-bottom: 1.5rem;
   background-color: var(--secondary-color);
@@ -58,7 +67,7 @@
 .btn-card {
   background-color: var(--tertiary-color);
   color: var(--primary-color);
-  border: 2px solid var(--primary-color);
+  border: 1.5px solid var(--primary-color);
   font-family: var(--font-mono);
   font-weight: 700;
   text-transform: uppercase;
@@ -93,7 +102,7 @@
   text-align: center;
   padding: 2rem;
   background-color: var(--tertiary-color);
-  border: 2px solid var(--primary-color);
+  border: 1.5px solid var(--primary-color);
   margin-bottom: 2rem;
 }
 
@@ -126,7 +135,7 @@
   font-size: 0.85rem;
   padding: 1rem;
   text-align: left;
-  border-bottom: 2px solid var(--primary-color);
+  border-bottom: 1.5px solid var(--primary-color);
 }
 
 .auth-table td {
@@ -209,6 +218,31 @@
 }
 
 /* Mobile adjustments */
+@media (max-width: 996px) {
+  .dashboard-tabs .nav-link {
+    padding: 10px 6px;
+    font-size: 0.7rem;
+    margin: auto;
+  }
+
+  .dashboard-tabs {
+    gap: 4px;
+  }
+  
+  .dashboard-tabs .nav-link i {
+    font-size: 1rem;
+    margin-bottom: 4px;
+  }
+
+  .text-long {
+    display: none;
+  }
+
+  .text-short {
+    display: inline;
+  }
+}
+
 @media (max-width: 768px) {
   /* Mobile tabs become buttons */
   .dashboard-tabs-container {
@@ -241,7 +275,7 @@
     margin-right: 0;
     margin-bottom: 0;
     height: 100%;
-    border: 2px solid var(--primary-color);
+    border: 1.5px solid var(--primary-color);
     background-color: var(--tertiary-color);
     font-size: 0.8rem;
     width: 100%;
@@ -282,7 +316,7 @@
   }
   
   .auth-table tr { 
-    border-bottom: 2px solid var(--primary-color);
+    border-bottom: 1.5px solid var(--primary-color);
     margin-bottom: 1rem;
   }
 
@@ -314,15 +348,20 @@
   }
 }
 
-@media (max-width: 576px) {
-  .dashboard-tabs .nav-link {
-    padding: 10px 6px;
-    font-size: 0.7rem;
-    margin: auto;
+@media (max-width: 460px) {
+  .expert-select-container {
+    flex-direction: column;
+    gap: 0.5rem;
   }
-  
-  .dashboard-tabs .nav-link i {
-    font-size: 1rem;
-    margin-bottom: 4px;
+}
+
+@media (max-width: 430px) {
+  .expert-assign-container {
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+
+  .availability-text {
+    margin-top: 0.8rem;
   }
 }
