--- a/main/static/css/home-styles.css
+++ b/main/static/css/home-styles.css
@@ -82,7 +82,7 @@
   display: flex;
   flex-direction: column;
   background-color: white;
-  border: 2px solid var(--primary-color);
+  border: 1.5px solid var(--primary-color);
   transition: all 0.3s ease;
   position: relative;
 }
@@ -143,7 +143,7 @@
   justify-content: center;
   background-color: var(--tertiary-color);
   position: relative;
-  border-bottom: 2px solid var(--primary-color);
+  border-bottom: 1.5px solid var(--primary-color);;
 }
 
 .auction-image {
@@ -220,7 +220,7 @@
 
 /* Search and filter section */
 .search-filter-wrapper {
-  border: 2px solid var(--primary-color);
+  border: 1.5px solid var(--primary-color);
   overflow: hidden;
   display: flex;
   align-items: stretch;
@@ -229,7 +229,7 @@
 
 #search-bar {
   border: none;
-  border-right: 2px solid var(--primary-color);
+  border-right: 1.5px solid var(--primary-color);
   border-radius: 0 !important;
   flex-grow: 1;
   padding: 0.8rem 1.2rem;
@@ -239,7 +239,7 @@
 .filter-dropdown {
   border: none !important;
   border-left: 0 !important;
-  border-right: 2px solid var(--primary-color) !important;
+  border-right: 1.5px solid var(--primary-color) !important;
   border-radius: 0 !important;
   width: 180px;
   padding: 0.8rem 1.2rem;
